[#239] Base Structure for Hera API (#240)
* Added API module. Updated CI/CD pipeline with better naming and so that API is also built and deployed when pushing to master

* Foundation for Kotlin GraphQL API

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,7 @@
 version: 0.0
 os: linux
 files:
-  - source: ./hera-prod-bundle-jar-with-dependencies.jar
-    destination: /home/ec2-user/bots
+  - source: ./hera-prod-bot-jar-with-dependencies.jar
+    destination: /home/ec2-user/apps
+  - source: ./hera-prod-api-jar-with-dependencies.jar
+    destination: /home/ec2-user/apps
